--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <canvas id="ctx" width="500" height="500" style="border:1px solid #000000;"></canvas>
-    <audio autoplay loop preload="metadata" style=" width:300px;">
+    <audio loop preload="metadata" style=" width:300px;">
         <source src="static/audio/vroom_vroom.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio><br />
@@ -22,29 +22,76 @@
                 this.x = params.x || 0;
                 this.y = params.y || 0;
                 this.img = params.img || null;
+                this.height = params.height;
+                this.width = params.width;
+            }
+            colliding(entity){
+                return this.x <= (entity.x + entity.width) &&
+                    this.x + this.width > entity.x &&
+                    this.y <= (entity.y + entity.height) &&
+                    this.y + this.height > entity.y;
             }
         }
 
         class Car extends Entity {
             constructor(params) {
+                const car_img = {};
+                const CAR_SCALE = 0.04;
+                car_img.forward_car = new Image();
+                car_img.forward_car.src = 'static/img/pink_car_forward.png';
+                car_img.forward_car.sHeight = car_img.forward_car.height * CAR_SCALE;
+                car_img.forward_car.sWidth = car_img.forward_car.width * CAR_SCALE;
+
+                car_img.left_car = new Image();
+                car_img.left_car.src = 'static/img/pink_car_left.png';
+                car_img.left_car.sHeight = car_img.left_car.height * CAR_SCALE;
+                car_img.left_car.sWidth = car_img.left_car.width * CAR_SCALE;
+
+                car_img.right_car = new Image();
+                car_img.right_car.src = 'static/img/pink_car_right.png';
+                car_img.right_car.sHeight = car_img.right_car.height * CAR_SCALE;
+                car_img.right_car.sWidth = car_img.right_car.width * CAR_SCALE;
+                params.img = car_img
+
+                params.x = WIDTH/2 - car_img.forward_car.sWidth/2;
+                params.y = HEIGHT - (car_img.forward_car.sHeight + 5);
+                params.height = car_img.forward_car.sHeight;
+                params.width = car_img.forward_car.sWidth;
+
                 super(params);
+
                 this.x_speed = 0;
                 this.y_speed = 0;
                 this.max_x_speed = 5;
                 this.max_y_speed = 7;
+                this.car_orientation = 'forward_car';
             }
             draw(){
-                let car_orientation;
-                if (this.x_speed == 0){
-                    car_orientation = 'forward_car';
+                if (this.x_speed === 0){
+                    this.car_orientation = 'forward_car';
                 } else if (this.x_speed > 0) {
-                    car_orientation = 'right_car';
+                    this.car_orientation = 'right_car';
                 } else {
-                    car_orientation = 'left_car';
+                    this.car_orientation = 'left_car';
                 }
-                ctx.drawImage(car_img[car_orientation], this.x, this.y, car_img.forward_car.sWidth, car_img.forward_car.sHeight);
+                this.detect_collision()
+                ctx.drawImage(this.img[this.car_orientation], this.x, this.y, this.img[this.car_orientation].sWidth, this.img[this.car_orientation].sHeight);
                 this.y += this.y_speed;
                 this.x += this.x_speed;
+            }
+            detect_collision(){
+                for(const collectible_id in Collectible.list){
+                    const collectible = Collectible.list[collectible_id];
+                    if (this.colliding(collectible)){
+                        Collectible.flagged_for_deletion.push(collectible_id);
+                    }
+                }
+                for(const obstacle_id in Obstacle.list){
+                    const obstacle = Obstacle.list[obstacle_id];
+                    if (this.colliding(obstacle)){
+                        console.log("Game Over!")
+                    }
+                }
             }
 
         }
@@ -52,10 +99,12 @@
 
         class Obstacle extends Entity {
             constructor(params) {
+                params.height = params.img.tree1.sHeight;
+                params.width = params.img.tree1.sWidth;
+
                 super(params);
                 this.y_speed = LEVEL_SPEED;
                 this.id = Math.random();
-                this.img = params.img;
                 Obstacle.list[this.id] = this;
             }
             draw(){
@@ -66,10 +115,12 @@
 
         class Collectible extends Entity {
             constructor(params) {
+                params.height = params.img.pill.sHeight;
+                params.width = params.img.pill.sWidth;
+
                 super(params);
                 this.y_speed = LEVEL_SPEED;
                 this.id = Math.random();
-                this.img = params.img;
                 Collectible.list[this.id] = this;
             }
             draw(){
@@ -79,29 +130,14 @@
         }
 
         Obstacle.list = {};
-        Collectible.list = {};
-
-        const car_img = {};
-        car_img.forward_car = new Image();
-        car_img.forward_car.src = 'static/img/pink_car_forward.png'
-        car_img.forward_car.sHeight = car_img.forward_car.height * 0.04;
-        car_img.forward_car.sWidth = car_img.forward_car.width * 0.04;
-
-        car_img.left_car = new Image();
-        car_img.left_car.src = 'static/img/pink_car_left.png'
-        car_img.left_car.sHeight = car_img.left_car.height * 0.1;
-        car_img.left_car.sWidth = car_img.left_car.width * 0.1;
-
-        car_img.right_car = new Image();
-        car_img.right_car.src = 'static/img/pink_car_right.png'
-        car_img.right_car.sHeight = car_img.right_car.height * 0.04;
-        car_img.right_car.sWidth = car_img.right_car.width * 0.04;
+        Collectible.list = {}
+        Collectible.flagged_for_deletion = [];
 
         const obstacle_img = {};
         obstacle_img.tree1 = new Image();
         obstacle_img.tree1.src = 'static/img/trees/palmtree1.png';
-        obstacle_img.tree1.sHeight = obstacle_img.tree1.height * 1.0;
-        obstacle_img.tree1.sWidth = obstacle_img.tree1.width * 1.0;
+        obstacle_img.tree1.sHeight = obstacle_img.tree1.height;
+        obstacle_img.tree1.sWidth = obstacle_img.tree1.width;
 
         obstacle_img.dancing_tree1 = new Image();
         obstacle_img.dancing_tree1.src = 'static/img/trees/dancing_palmtree1.gif';
@@ -114,12 +150,79 @@
         pill_img.pill.sHeight = pill_img.pill.height * 0.2;
         pill_img.pill.sWidth = pill_img.pill.width * 0.2;
 
-        const car = new Car({x:WIDTH/2 - car_img.forward_car.sWidth/2, y: HEIGHT - (car_img.forward_car.sHeight + 5), img:car_img})
+        const car = new Car({})
 
+        class Background{
+            constructor(params) {
+                const background_imgs = {};
+                background_imgs.sand1 = new Image();
+                background_imgs.sand1.src = 'static/img/background/sand1.png';
+                background_imgs.sand1.sHeight = background_imgs.sand1.height;
+                background_imgs.sand1.sWidth = background_imgs.sand1.width;
+
+                background_imgs.sand2 = new Image();
+                background_imgs.sand2.src = 'static/img/background/sand2.png';
+                background_imgs.sand2.sHeight = background_imgs.sand2.height;
+                background_imgs.sand2.sWidth = background_imgs.sand2.width;
+
+                background_imgs.sand3 = new Image();
+                background_imgs.sand3.src = 'static/img/background/sand3.png';
+                background_imgs.sand3.sHeight = background_imgs.sand3.height;
+                background_imgs.sand3.sWidth = background_imgs.sand3.width;
+
+                background_imgs.sand4 = new Image();
+                background_imgs.sand4.src = 'static/img/background/sand4.png';
+                background_imgs.sand4.sHeight = background_imgs.sand4.height;
+                background_imgs.sand4.sWidth = background_imgs.sand4.width;
+
+                this.img = background_imgs;
+                this.background = [];
+
+                this.tiles_needed_for_width = WIDTH / (this.img.sand1.width + 1) + 2;
+                this.tiles_needed_for_height = HEIGHT / (this.img.sand1.height + 1) + 2;
+
+                for(let i=0; i <= this.tiles_needed_for_height; i++) {
+                    this.background.push(this.create_row(this.tiles_needed_for_width));
+                }
+            }
+
+            create_row(length) {
+                const row = [];
+                for(let j=0; j <= length; j++){
+                    const r = Math.random();
+                    if(r <= 0.7) {
+                        row.push(1);
+                    } else if (r <= 0.95) {
+                        row.push(4);
+                    } else {
+                        row.push(3);
+                    }
+                }
+                return row;
+            }
+
+            draw(){
+                let y_delta = this.img.sand1.height;
+                let y_shift = 0 - y_delta;
+                const int_to_tile = {1:'sand1', 2:'sand2', 3:'sand3', 4:'sand4'};
+                for(const row of this.background){
+                    let x_delta = this.img.sand2.width;
+                    let x_shift = 0 - x_delta;
+
+                    for(const tile_int of row){
+                        const img = this.img[int_to_tile[tile_int]];
+                        ctx.drawImage(img, x_shift, y_shift, img.sWidth, img.sHeight);
+                        x_shift += x_delta;
+                    }
+                    y_shift += y_delta;
+                }
+                this.background.pop();
+                this.background.unshift(this.create_row(this.tiles_needed_for_width));
+            }
+        }
+        const background = new Background({});
         function drawBackground(){
-            ctx.fillStyle = "#f3d74c";
-            ctx.fillRect(0, 0, HEIGHT, WIDTH);
-            ctx.fillStyle = "black";
+            background.draw();
         }
 
         function drawObstacles(){
@@ -146,15 +249,14 @@
             if (r < draw_frequency){
                 new Collectible({x: r * WIDTH * (1/draw_frequency), y: 0 - pill_img.pill.sHeight, img:pill_img})
             }
-            const remove_list = [];
             for (let c_id in Collectible.list){
                 const c = Collectible.list[c_id];
                 c.draw();
                 if (c.y > HEIGHT + 5){
-                    remove_list.push(c.id);
+                    Collectible.flagged_for_deletion.push(c.id);
                 }
             }
-            for(let c of remove_list){
+            for(let c of Collectible.flagged_for_deletion){
                 delete Collectible.list[c];
             }
         }
@@ -194,6 +296,7 @@
             else if (event.code === 'KeyW') //w
                 car.y_speed = 0;
         }
+
     </script>
 </body>
 </html>
